[tool.pytest.ini_options]
pythonpath = [
  ".",
]
addopts = [
    "--import-mode=importlib",
]

[tool.poetry]
name = "pyass"
version = "0.1.0"
description = "A library to read, manipulate, and write Advanced SubStation Alpha (.ass) files"
authors = ["xIceArcher <xicearcher@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
